--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "test": "jest --config jest/jest.config.js"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "next": "^13.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.4.3",
+    "swr": "^2.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -35,6 +38,7 @@
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
+    "sass": "^1.58.3",
     "typescript": "4.9.5"
   }
 }
