--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "lint-staged": "lint-staged --concurrent=false",
     "prepare": "husky install",
-    "test": "jest --config jest/jest.config.js"
+    "test": "yarn test:unit && yarn test:e2e",
+    "test:unit": "jest --config jest/jest.config.js",
+    "test:e2e": "playwright test e2e -c e2e/playwright.config.ts"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -23,6 +25,7 @@
     "swr": "^2.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.31.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
